creando nuevas funcionalidades

--- a/app/src/app/authentication/login/login.component.html
+++ b/app/src/app/authentication/login/login.component.html
@@ -5,7 +5,7 @@
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <div class="text-center">
                         <img alt="homepage" src="assets/images/logo-aps2.png">
-                        <h4 class="m-t-0">Sistema de Recepción de documentos y resoluciones</h4>
+                        <h4 class="m-t-0">Sistema de Gestión y Control de Productos MarIsabel</h4>
                     </div>
 
                     <div fxLayout="row wrap">
