--- a/app/src/app/shared/layouts/full/full.component.html
+++ b/app/src/app/shared/layouts/full/full.component.html
@@ -29,8 +29,8 @@
             <mat-icon>menu</mat-icon>
         </button>
           =============================== -->
-        <h1 class="aps-nombre-sistema">Sistema de Recepción de Resoluciones y Circulares - SIRECI</h1>
-        <h1 class="aps-sigla-sistema"></h1>
+        <h1 class="aps-nombre-sistema">Sistema de Gestión y Control de Material </h1>
+        <!-- <h1 class="aps-sigla-sistema"></h1> -->
         <span fxFlex></span>
         <!-- ============================================================== -->
         <!-- app header component - style you can find in header.scss / header.component.ts-->
