--- a/app/src/app/pages/02-productos/productos.component.css
+++ b/app/src/app/pages/02-productos/productos.component.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 800px) {
   .form-label{
     padding: 5px 2px;
@@ -52,8 +51,6 @@ th.mat-sort-header-sorted {
   color: black;
 }
 
-
-
 ::ng-deep .error{
   color:white;
   background: rgb(253, 180, 177) !important;
@@ -62,10 +59,6 @@ th.mat-sort-header-sorted {
 ::ng-deep .ok{
   color:white;
   background: rgb(204, 250, 218) !important;
-}
-
-::ng-deep .mat-form-field-wrapper {
-  padding-bottom: .75em;
 }
 
 .input {
@@ -77,4 +70,8 @@ th.mat-sort-header-sorted {
   height:20px;
   line-height:20px;
   padding-left:10px;
+}
+
+::ng-deep .mat-form-field-wrapper {
+  padding-bottom: 1.2em;
 }
