se agregaron cambios para el acceso a los usuarios tambien se agrego productos en el backend

--- a/app/src/app/shared/layouts/full/full.component.html
+++ b/app/src/app/shared/layouts/full/full.component.html
@@ -14,7 +14,7 @@
                 <!-- Logo text -->
                 <span fxShow="false" fxShow.gt-xs class="aps-tmp-logo">
                  <!-- dark Logo text -->
-                 <img src="assets/images/logo-aps.png" alt="homepage" class="light-logo">
+                 <img src="assets/images/logo.png" alt="homepage" class="light-logo">
                  <!--<img src="assets/images/logo-text.png" alt="homepage" class="dark-logo">-->
                  <!-- Light Logo text -->
                  <!--<img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage">-->
