--- a/app/src/app/authentication/login/login.component.html
+++ b/app/src/app/authentication/login/login.component.html
@@ -4,7 +4,7 @@
             <mat-card-content>
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <div class="text-center">
-                        <img alt="homepage" src="assets/images/logo-aps2.png">
+                        <img alt="homepage" src="assets/images/logo.png">
                         <h4 class="m-t-0">Sistema de Gestión y Control de Productos MarIsabel</h4>
                     </div>
 
