cambios hasta ingresar a a productos

--- a/app/src/app/pages/02-productos/productos.component.html
+++ b/app/src/app/pages/02-productos/productos.component.html
@@ -153,7 +153,7 @@
     <div fxLayout="row wrap" *ngFor="let config of data">
       <div class="form-table-body"   fxFlex.gt-lg="15" fxFlex.gt-md="15"  fxFlex.gt-xs="100" fxFlex="100">
         <div class="form-table-body" >
-          {{config['tipo']}}
+          {{config['categoria']}}
         </div>
       </div>
       <div class="form-table-body"   fxFlex.gt-lg="19" fxFlex.gt-md="19"  fxFlex.gt-xs="100" fxFlex="100">
